
Tue Jun 27 15:49:35 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kparse.c - Change LineNbr to sLineNbr to avoid conflict with kparse.h

Mon Jun 26 14:58:02 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* log.c: Use HAVE_TIME_H not NEED_TIME_H

	* klog.c: Change NEED_TIME_H to HAVE_TIME_H

	* configure.in: Check for sys/select.h.  Also check for time.h.

	* send_to_kdc.c: If sys/select.h exists, include it.

Fri Jun 23 18:15:07 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix Sam's typo so libkrb4.a gets symlinked
		properly

Fri Jun 23 12:29:39 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* configure.in: Handle generation of rules to make static libs.

	* Makefile.in (LIBNAME): Changed to support new handling of static
        libraries


Fri Jun 16 11:15:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change "./DONE" to "DONE" since we know how to make
		"DONE", hence a clean make won't get confused any more.
	* configure.in - Add shared library install target.


Thu Jun 15 18:07:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Add definitions for shared library build rules.
	* configure.in - Create symlinks for archive and shared library
		when we build them.

Fri Jun  9 19:28:22 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri Jun  9 00:01:35 1995  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in, configure.in: use CopyHeader rather than hand-coded
		header install rule.

Fri May 26 21:11:38 1995  Theodore Y. Ts'o  (tytso@dcl)

	* cr_err_repl.c (cr_err_reply): Remove backward compatibility code
		for Kerberos V3 (!) which was causing problems for shared
		libraries.  Library code shouldn't try to reference global
		variables defined by the calling application!

Sun May 21 16:06:20 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* dest_tkt.c: If O_SYNC is not defined, define as 0.

	* in_tkt.c: If O_SYNC is not defined, define as 0.
